--- a/IdenticonDotNet/Views/_ViewImports.cshtml
+++ b/IdenticonDotNet/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using IdenticonDotNet
 @using IdenticonDotNet.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+
+@using Jdenticon.AspNetCore
+@addTagHelper *, Jdenticon.AspNetCore
